# sample-tokio-actix-rs

./: .gitignore  Cargo.toml  abcdefd
actix-web/: Cargo.toml
actix-web/examples/: configure.rs  extractors.rs  guard_virtual_host.rs  responder.rs  scope.rs  state.rs  state_mutable.rs
db_sql/: Cargo.toml
db_sql/examples/: sqlx.rs
db_sql/src/: main.rs
