[package]
name = 'actix-web'
version = '0.1.0'
edition = '2021'

[dependencies]
actix-web = '4'
serde_json = '1'
futures = "0.3.25"

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.tokio]
version = '1.22'
features = [
    'rt',
    'rt-multi-thread',
    'io-util',
    'macros',
]
